--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,14 +5,14 @@
 
 $color-pack: false;
 $heading-font-family: 'IBM Plex Mono', monospace;
-// $body-font-family: 'Source Sans Pro', sans-serif;
+$body-font-family: 'Atkinson Hyperlegible', sans-serif;
 
 $material-light: (
-  'background': #d9edf9,
-  //'cards': #f4f4f5,
+  'background': #f0f9ff,
+  'cards': #f0f9ff,
 );
 $material-dark: (
-  'background': #001d2d,
-  'cards': #001d2d,
+  'background': #0f172a,
+  'cards': #0f172a,
 );
 $card-elevation: 0;
