--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -8,11 +8,12 @@ $heading-font-family: 'IBM Plex Mono', monospace;
 $body-font-family: 'Atkinson Hyperlegible', sans-serif;
 
 $material-light: (
-  'background': #f0f9ff,
-  'cards': #f0f9ff,
+  'background': #fff,
+  'cards': #fff,
 );
 $material-dark: (
   'background': #0f172a,
   'cards': #0f172a,
+  'app-bar': #0f172a,
 );
 $card-elevation: 0;
