build: portfolio-update

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -10,6 +10,7 @@ $body-font-family: 'Atkinson Hyperlegible', sans-serif;
 $material-light: (
   'background': #fff,
   'cards': #fff,
+  'app-bar': #fff,
 );
 $material-dark: (
   'background': #0f172a,
