--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -8,9 +8,9 @@ $heading-font-family: 'IBM Plex Mono', monospace;
 $body-font-family: 'Atkinson Hyperlegible', sans-serif;
 
 $material-light: (
-  'background': #fff,
-  'cards': #fff,
-  'app-bar': #fff,
+  'background': #eff6ff,
+  'cards': #eff6ff,
+  'app-bar': #eff6ff,
 );
 $material-dark: (
   'background': #0f172a,
